Fix bug where tooltips get cut off when there are few styles

--- a/src/components/StyleViewer/StyleViewer.scss
+++ b/src/components/StyleViewer/StyleViewer.scss
@@ -52,6 +52,9 @@
 
   &__content {
     overflow-y: auto;
+
+    // Expand to fill space when there are few styles.
+    height: 100%;
   }
 }
 
